@@ -1,3 +1,9 @@
+2005-10-13  noel,,,  <vnoel@cox.net>
+
+	reviewed by: <delete if not using a buddy>
+
+	* help/C/gnome-system-log.xml:
+
 2005-10-13  Vincent Noel <vnoel@cox.net>
 
 	* help/C/gnome-system-log.xml: Update the help from
